[package]
edition = "2021"
name = "lapce-swift"
version = "0.0.1"

[target.'cfg(target_os = "wasi")'.dependencies]

# default deps for all lapce plugins
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lapce-plugin = { git = "https://github.com/lapce/lapce-plugin-rust.git", branch = "volt" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
